--- a/PIXELLLS.csproj
+++ b/PIXELLLS.csproj
@@ -3,4 +3,7 @@
     <TargetFramework>net472</TargetFramework>
     <LangVersion>12.0</LangVersion>
   </PropertyGroup>
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3"/>
+  </ItemGroup>
 </Project>
